--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,16 @@ dependencies = [
     "marimo>=0.15.2",
     "matplotlib>=3.10.6",
     "numpy>=2.2.6",
+    "openpyxl>=3.1.5",
     "pandas>=2.3.2",
+    "plotly>=6.3.0",
     "pyarrow>=21.0.0",
     "python-bcb>=0.3.3",
     "quantstats>=0.0.76",
     "requests>=2.32.5",
+    "scipy>=1.15.3",
     "seaborn>=0.13.2",
+    "tqdm>=4.67.1",
     "xlrd>=2.0.2",
     "yfinance>=0.2.65",
 ]
