--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "requests>=2.32.5",
     "scipy>=1.15.3",
     "seaborn>=0.13.2",
+    "statsmodels>=0.14.5",
     "tqdm>=4.67.1",
     "xlrd>=2.0.2",
     "yfinance>=0.2.65",
